chore: buildSrc Libs.kt를 gradle/libs.versions.toml 방식으로 마이그레이션 및 gradle 9.5.0 업그레이드 (#15)
* publish: Prepare release 0.0.5

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* ai: CLAUDE.md 축약

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* chore: 불필요한 컴파일 설정 제거

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* Add .editorconfig

* change jvmargs: use G1GC

* docs: sync AGENTS.md with project guidance

* chore: 지침 수정

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* build: Upgrade dependencies and prepare 0.0.6

- Bump project version to 0.0.6
- Update Spring Boot 4 to 4.0.3, Hibernate Validator to 9.1.0.Final, Agroal to 3.0
- Update Micrometer, Redisson, Exposed, JUnit, Mockk, and other libraries
- Remove Dropwizard Metrics, Pods4k, and Bouncy Castle dependencies
- Fix typo in `gradle.properties` JVM args (`-XX:+UseG1GC`)
- Refactor `RedisApplication`: use property syntax and improve KDoc

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* refactor: RedissonClient 생성 옵션 변경

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* refactor: RedissonClient 생성 옵션 변경

    - thread = 256
    - nettyThreads = 128
    - TcpNoDelay, TcpUserTimeout 등 설정

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* fix: close lifecycle gaps and add regression proofs

* build: bluetape4k snapshot 을 maven central 에서 가져오도록 수정

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* update jvmargs

* build: Spring Boot 4 및 Resilience4j 2.4.0 호환성 업데이트

- Resilience4j 버전을 2.4.0으로 올리고 Spring Boot 4 지원을 위해 `resilience4j-spring-boot4` 의존성을 사용하도록 변경합니다.
- Spring Cloud, Spring Integration, Reactor, Bucket4j 등 관련 라이브러리 버전을 업데이트합니다.
- Spring Cloud가 아직 Spring Boot 4와 호환되지 않아 `spring-cloud` 모듈을 빌드에서 임시 제외하고, 게이트웨이 관련 모듈의 AOT 및 GraalVM Native 빌드를 비활성화합니다.
- `gradle.properties`에서 `--enable-preview` JVM 옵션을 제거합니다.

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* ai: claude, codex 작업 관리 추가

Signed-off-by: debop <sunghyouk.bae@gmail.com>

* build(deps): Bump up bluetape4k (1.5.0-SNAPSHOT -> 1.5.0-Beta1)

  - bluet